--- a/package.json
+++ b/package.json
@@ -10,8 +10,20 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
+    "@reduxjs/toolkit": "^2.2.3",
+    "@types/react-native-vector-icons": "^6.4.18",
+    "axios": "^1.6.8",
+    "native-base": "^3.4.28",
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-native": "0.73.6",
+    "react-native-safe-area-context": "^3.3.2",
+    "react-native-screens": "^3.30.1",
+    "react-native-svg": "^12.1.1",
+    "react-native-vector-icons": "^10.0.3",
+    "react-redux": "^9.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
